fix: layout for login button is broken on mobile
* make the width 100% to fill all the space avaiable to be correctly centered

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -59,7 +59,7 @@ login {
   .buttons {
     margin: auto;
     margin-top: 70px;
-    width: 250px;
+    width: 100%;
 
     &__login {
       border-radius: 20px;
